--- a/economics/내러티브-경제학.md
+++ b/economics/내러티브-경제학.md
@@ -17,4 +17,12 @@
 ## How 
 
 - 6가지 대표적인 경제 내러티브 사례 분석 
-- 
+  1. 공황 vs. 신뢰 
+  2. 근검절약 vs. 과시적소비 
+  3. 금본위제 vs. 복본위제 
+  4. 노동절약 기계 
+  5. 자동화 및 인공지능 
+  6. 부동산 시장의 호황과 불황 
+  7. 주식 시장의 거품 
+  8. 보이콧, 폭리취득자, 악덕기업 
+  9. 임금-물가 상승의 악순환과 사악한 노조 
