--- a/economics/내러티브-경제학.md
+++ b/economics/내러티브-경제학.md
@@ -14,6 +14,15 @@
 
 ## What 
 
+### 노동절약 기계, 자동화, 인공지능 
+
+- 기계가 일자리를 뺴앗아 갈 것이라는 공포는 1930년대 이래에 지속적이고 주기적으로 발생 
+- 당시 담론의 특징; 기계화가 이전과는 근본적으로 다른 형태로 진행되고 있으며, 이것이 결국 인간 노동의 종말이라는 인식 
+- 케인즈의 "자동화" 낙관, 찰리 채플린의 "모던 타임즈" 모두 이러한 자동화에 관한 대중의 인식 하에서 나온 산물 
+- 이러한 공포, 잠재적인 위협이 대중의 소비, 기업의 투자를 위축 시킴 
+  + 아포칼립스에 관한 대비일까? 
+- 
+
 ## How 
 
 - 6가지 대표적인 경제 내러티브 사례 분석 
