--- a/economics/행동의전염.md
+++ b/economics/행동의전염.md
@@ -26,4 +26,13 @@ Robert H. Frank
     - 간접 흡연을 통헌 폐해는 아주 크지 않은 반면, 직접 흡연의 피해가 크다면 
     - 이런 흡연자들이 일찍 죽어서 오히려 국가의 건강 보험 관련 재정 부담을 줄여준다면, 
     - 비용 >> 편익이라고 주장할 수 있을까? 
+
+### Why Peer Pressure 
+
+- 경제학자들은 대체로 또래 압력을 무시하는 경향이 있다? 
+  - 사람들이 계산에 따라서 움직인다면, 또래 압력과 같은 경제 주체 외부에 있는 '맥락'은 중요하지 않다. 
+  - 이것이 미치는 영향은 노이즈에 불과하다. 
+
+- 실제로 그런가? 
+  - 또래 집단의 압력은 계산과 무관하게 진화를 통해 다음어진 인간 행동의 원칙, 일 수 있다. 
  
