--- a/economics/행동의전염.md
+++ b/economics/행동의전염.md
@@ -32,7 +32,15 @@ Robert H. Frank
 - 경제학자들은 대체로 또래 압력을 무시하는 경향이 있다? 
   - 사람들이 계산에 따라서 움직인다면, 또래 압력과 같은 경제 주체 외부에 있는 '맥락'은 중요하지 않다. 
   - 이것이 미치는 영향은 노이즈에 불과하다. 
+  - 아모스 트버스키의 인용은 재기가 넘친다. 
+  
+  ```
+  My colleagues, they study artificial intelligence; me, I study natural stupidity. A. Tversky
+  ```
 
 - 실제로 그런가? 
   - 또래 집단의 압력은 계산과 무관하게 진화를 통해 다음어진 인간 행동의 원칙, 일 수 있다. 
+  - 중간에 저자가 행동경제학의 원리를 끌고 오는데 이게 또래 압력과 어떻게 연결되는지는 아직 알기 힘들었다. 
+    - 다만 행동경제학의 행동 원리라는 게, 비교를 통해서 움직이는 것이라면 주변의 모든 정보를 파악해서 이를 절대적으로 비교하기에 앞서 주변 사람들이 어떻게 움직이는지에 주목하는 경향이 행동경제학의 상대적 행동 원리(맥락 주의)와 통한다고 볼 수도 있을 것이다. 
+
  
