--- a/socials/마강래-부동산-누구에게나-공평한-불행.md
+++ b/socials/마강래-부동산-누구에게나-공평한-불행.md
@@ -1,1 +1,35 @@
-..
+
+- 평범하고 심심한 해법 
+- 그러나 항상 새겨야 할 무엇일지도 모르겠다. 
+
+# LINK 
+
+[알라딘](https://www.aladin.co.kr/shop/wproduct.aspx?ItemId=280333845)
+
+# Who 
+- 마강래 
+
+# What
+- 부동산, 누구에게나 공평한 불행 
+
+# Why 
+
+## 부동산 이슈에 관한 전반적인 조망 
+
+- 집값을 끌어올리고 내리는 것은 시장이지만, 부동산 시장은 단일하지 않다. 
+- 대한민국 부동산 시장은 단일한가? 
+    + 단일하지 않은 재화를 단일한 것인냥 취급하는 것이 어쩌면 더 큰 문제일지도 모르겠다는 생각... 
+
+
+
+## 장기적으로 올바른 시각 
+
+## 그러나 단기적으로도 옳을까? 
+
+
+# Points to remember
+
+"지금 시점에서 더욱 필요한 것은 제대로 된 수요 정책이다. 하지만 지금처럼 수요를 '억제'하는 것이 아니라 수요를 '분산'하는 쪽으로 정책을 설계해야 한다." 
+
+"이명박 정부는 공급을 확대했고, 박근혜 정부는 공급을 축소했다. 문재인 정부는 다시 공급을 확대하고 있다. 그렇다면 다음 정부는? 안 보아도 비디오다. 부동산 시장은 침체를 겪을 가능성이 크다."
+
