--- a/socials/마강래-부동산-누구에게나-공평한-불행.md
+++ b/socials/마강래-부동산-누구에게나-공평한-불행.md
@@ -20,16 +20,60 @@
 - 대한민국 부동산 시장은 단일한가? 
     + 단일하지 않은 재화를 단일한 것인냥 취급하는 것이 어쩌면 더 큰 문제일지도 모르겠다는 생각... 
 
-
-
 ## 장기적으로 올바른 시각 
+
+- 중요한 것은 모호한 공급 정책과 임의적인 수요 억제가 아니라, 수요의 분산 
+    + 20세기 이후 도시의 중요성을 생각하면 서울로 모여드는 현상은 당연한 것 
+    + 이로 인해서 서울/수도권은 항시적인 주택 부족 현상을 경험할 가능성이 높다. 
+
+
+## 다주택자에 관한 생각 
+
+- 다주택자에 대한 종부세 부과의 부작용 
+    + 종부세로 인해서 다주택자의 기존 주택 판매 
+    + 주택의 가격은 떨어지지만, 주택을 구입할 수 없는 계층이 일정하다는 전제 하에서 임대 주택의 공급 감소 &rarr; 이로 인한 가격 상승 
+    + 이른바 "똘똘한 한채"의 부작용 
+        + 다주택자가 서울과 지방에 주택을 갖고 있다고 할 때, 지방의 주택만 처분 
+
+- 다주택자와 싸우는 다양한 방법 
+    + 다주택자들에게 중과세를 때려서 집을 내놓게 하는 방법 
+    + 다른 rent를 직접 통제하는 방법 
+    + 시장을 통해서 rent를 통제하는 방법 
 
 ## 그러나 단기적으로도 옳을까? 
 
+- 현 정부 혹은 정치권이 주장한 정책의 비현실성 
+    + 현재 문재인 정부하에서 발표된 수도권 공급 물량은 200만호에 육박 
+    + 노태우 정부에서 주택 200만 호 건설을 천명했을 때 수도권에 계획된 공급 물량은 90만 호. 
 
-# Points to remember
+- 사람들이 살고 싶은 곳이 집을 제공해주자는 주장 
+    + (내 생각) 단기적으로 그리고 정치적으로는 옳바를 수 있다고 생각... 
+    + 그러나 이러한 공급이 목마른 데 바닷물을 마시는 것과 비슷한 것이 아닐까? 
+    + 집중과 집적은 더 큰 집중과 집적을 낳을 수 있다. 
+    + 공급 정책은 단기적 혹은 정치적으로는 주택 가격 상승의 미봉책으로 기능할 수 있다. 
+
+## 이촌 향도의 패턴 
+
+- (과거) 과거는 농촌에서 도시로 인구 유출 
+- (현재) 중소 도시에서 대도시(수도권 포함)으로 인구 유출 
+- (미래) 지방 대도시권에서 수도권으로의 인구 유출 
+
+## 인센티브에 반응한다! 
+
+- 1가구 1주택 정책의 효과에 따라서, 문재인 정권 이후에 세대 수 증가 [LINK](https://www.mois.go.kr/frt/bbs/type010/commonSelectBoardArticle.do?bbsId=BBSMSTR_000000000008&nttId=82058)
+- (생각) 세대수 증가의 원인이 세제 인센티브에 반응한 결과인지는 좀 더 생각을 해봐야... 
+
+
+
+# Points to remember 
 
 "지금 시점에서 더욱 필요한 것은 제대로 된 수요 정책이다. 하지만 지금처럼 수요를 '억제'하는 것이 아니라 수요를 '분산'하는 쪽으로 정책을 설계해야 한다." 
 
 "이명박 정부는 공급을 확대했고, 박근혜 정부는 공급을 축소했다. 문재인 정부는 다시 공급을 확대하고 있다. 그렇다면 다음 정부는? 안 보아도 비디오다. 부동산 시장은 침체를 겪을 가능성이 크다."
+
+"중소도시의 젊은이들이 바로 수도권으로 이동하고 있는 것이 아니다. 압도적인 대다수가 주변 대도시로 향하고 있다. 동시에 대도시의 젊은 인구는 수도권으로 향하고 있다. 지방의 대도시권은 수도권에 뺏긴 인구를 주변 지역에서 흡수하며 버티고 있다." 
+
+"집값을 설명하는 데 있어 인구의 '(출산과 사망으로 인핸) 자연적 증가'보다 중요한 것은 '(이동으로 인한) 사회적 증가'라는 뜻이다."
+
+
 
