--- a/socials/인류-모두의-적.md.md
+++ b/socials/인류-모두의-적.md.md
@@ -7,9 +7,12 @@ Enemy of All Mankind 2020 by Steven Johnson
 ## 총평 
 흥미로운 독서였다. 해적왕 헨리 에브리의 건스웨이 호 노략과 주변의 지정학 그리고 지리의 역학을 다루고 있다. 
 
-- 해적 되기는 17세기 후반 많은 뱃사람들에게 일종의 기회였다. 국제 무역의 폭발적인 증가로 인해서 해상 무역이 크게 증가한 반면, 이 무역 물류의 중심이 되는 존재들에게는 위험에 비해서 돌아오는 수익이 크지 않은 상황 
 
 ## 해적이 된다는 것 1
+
+### 뱃사람이 누리는 기회 
+
+해적 되기는 17세기 후반 많은 뱃사람들에게 일종의 기회였다. 국제 무역의 폭발적인 증가로 인해서 해상 무역이 크게 증가한 반면, 이 무역 물류의 중심이 되는 존재들에게는 위험에 비해서 돌아오는 수익이 크지 않은 상황 
 
 ### 낭만과 인쇄술 
 - 해적이 된다는 것은 몇 년 치 혹은 수 십 년 치의 이익을 한번에 땡긴다는 것을 의미했다. 
